--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sanity/vision": "^3.81.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "motion": "^12.6.0",
     "next": "15.2.4",
