--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-is": "^19.0.0",
     "sanity": "^3.81.0",
