--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-is": "^19.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "sanity": "^3.81.0",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.16",
